# lysozyme-stain-quantification

./: .gitignore  .lintr  DASK_IMPROVEMENTS.md  DASK_USAGE.md  README.md  REBUILD_SUMMARY.md  ThingDetector.py  consolidated_new_morph.ipynb  fileIO.py  image_tools.py  individual_processor.py  karen_detect_crypts.py  karen_detect_crypts_dask.py  next_step.txt  performance_test.py  primary.py  primary_analysis.py  pyproject.toml  requirements.txt  simplified_test_run_of_dask.py  test_pipeline.py  test_visualizations.py  thingdetectorNotebook.ipynb  yen_detect_crypts.py
DevNotebooks/: G2EB-RFP 40x-4.tif  initialNotebookTests_forLysozymeStainQuant.ipynb
component development/: extractor_pipeline_debug.ipynb  ramblings.md  rebuild.ipynb  super simplified.ipynb
component development/mergeLogic/: ramblings_2.md  (+3 more)
docs/: PipelineTheory.md  Terms_and_Conditions.md  WIKI.md  attribuitions.md  crypt_fluorescence_summary.md  pipelineTheory.ipynb
ignore/: README.md  is_it_enough.txt  requirements.txt  run_py_job.sh
method_development/: consolidated_new_morph.ipynb  new_method_clean_no_random_dev.ipynb  new_morph_internal_saver.py
src/: README_watershed_update.md  __init__.py  blob_det.py  blobdetector.py  dask_lysozyme_pipeline.py  primary.py  run.py  simplified_test_run_of_dask.py  test_integration.py  test_watershed_processing.py  visual_inspector.py  visual_inspector_new.py
src_outdated/: anti-repeat-fixer.py  blob_det.py  primary.py  run.py  test.ipynb  test_real_images.py
tests/: __init__.py  test_integration.py  test_utils.py
tools/: __init__.py  blobdetector.py  detection_methods.py  expand.py  qupath_exporter.py  setScaleFromAnnotation.groovy
(+104 files in other folders)
